--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "jasmine": "^4.2.1",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "jest-image-snapshot": "^5.1.0",
+    "jest-jasmine2": "^28.1.1",
     "lint-staged": "^13.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "node-fetch": "^3.2.5",
